--- a/BlazoriseTreeView/Pages/Counter.razor
+++ b/BlazoriseTreeView/Pages/Counter.razor
@@ -23,7 +23,7 @@
     <ul level="0">
         @foreach (var item in Items)
         {
-             var _key = "main_tree_" + item;
+            var _key = "main_tree_" + item;
             <BlazoriseTreeView.Components.TreeComponent Item=@item FavoritesParentCallback="FavoriteCallbackNode" FavoritesNodesCallBack="_FavoritesNodesCallBack" Level=1 @key=item />
         }
     </ul>
@@ -36,6 +36,7 @@
     public List<Item> AllDataSource { get; set; }
     private int currentCount = 0;
     private List<Item> FavoritesNodes { get; set; } = new List<Item>();
+    private List<Item> ResultArray { get; set; } = new List<Item>();
     private Item FavoNodes { get; set; } = null;
     List<string> selectedNodes = new List<string>();
     IEnumerable<Item> Items;
@@ -44,7 +45,7 @@
     {
         await base.OnInitializedAsync();
         Items = new[]
-                                            {
+                                                {
         new Item { Text = "Item 1",  NodeId = "1" },
         new Item
         {
@@ -97,12 +98,22 @@
     }
     void FavoriteCallbackNode(Item node)
     {
-       
-        FavoritesNodes.Add(node);
-
-        Console.WriteLine("node {0}", JsonSerializer.Serialize(FavoritesNodes));
+        var result = new Item();
+        var data = Items.ToList();
+        var collection = new List<Item>();
+        //FavoritesNodes.Clear();
+        var ess = result.AddItemToCollection(data, node);
+        if(ess != null)
+        {
+            collection.Add(ess);
+            FavoritesNodes = FavoritesNodes.Union(collection).Distinct().ToList();
+        }
+        
+        
+        StateHasChanged();
 
     }
+
 
 
 }
